// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manga admin page should render correctly should render correctly with data 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root MuiContainer-disableGutters MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root makeStyles-paper-20 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="makeStyles-titleBar-15"
        >
          <h4
            class="MuiTypography-root makeStyles-title-14 MuiTypography-h4"
          >
            Dr. STONE
          </h4>
        </div>
        <div
          class="makeStyles-details-17"
        >
          <a
            href="https://myanimelist.net/manga/103897"
            rel="noreferrer noopener"
            target="_blank"
          >
            <img
              alt="Dr. STONE"
              class="makeStyles-thumbnail-16"
              src="https://mangadex.org/images/manga/20882.jpg?1585634146"
            />
          </a>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
          >
            <table
              class="makeStyles-infoTable-19"
            >
              <tbody>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Latest release:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-18 MuiTypography-body1"
                      title="Sun, 05 Jul 2020 16:00:00 GMT"
                    >
                      Jul 5th 2020, 16:00 - 1 day ago
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Estimated release interval:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-18 MuiTypography-body1"
                    >
                      7 days 0 hours
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Estimated next release:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-18 MuiTypography-body1"
                    >
                      Jul 12th 2020, 16:00
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Latest chapter:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-18 MuiTypography-body1"
                    >
                      157
                    </p>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div>
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-root-25 MuiToolbar-gutters"
          >
            <button
              aria-label="Add item"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              title="Add"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <h6
              aria-label="Table title"
              class="MuiTypography-root makeStyles-title-26 MuiTypography-h6"
            >
              Forced checks
            </h6>
          </div>
          <table
            class="MuiTable-root"
            role="table"
          >
            <thead
              class="MuiTableHead-root makeStyles-tableHead-23"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
                role="row"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                />
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                >
                  Service name
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                >
                  Service id
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
              role="rowgroup"
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Manga admin page should render correctly should render correctly without data 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root MuiContainer-disableGutters MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root makeStyles-paper-7 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="makeStyles-titleBar-2"
        >
          <h4
            class="MuiTypography-root makeStyles-title-1 MuiTypography-h4"
          />
        </div>
        <div
          class="makeStyles-details-4"
        >
          <a
            rel="noreferrer noopener"
            target="_blank"
          >
            <img
              class="makeStyles-thumbnail-3"
            />
          </a>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
          >
            <table
              class="makeStyles-infoTable-6"
            >
              <tbody>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Latest release:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-5 MuiTypography-body1"
                      title="Unknown"
                    >
                      Unknown
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Estimated release interval:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-5 MuiTypography-body1"
                    >
                      Unknown
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Estimated next release:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-5 MuiTypography-body1"
                    >
                      Unknown
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Latest chapter:
                    </p>
                  </td>
                  <td>
                    <p
                      class="MuiTypography-root makeStyles-detailText-5 MuiTypography-body1"
                    >
                      Unknown
                    </p>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div>
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-root-12 MuiToolbar-gutters"
          >
            <button
              aria-label="Add item"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              title="Add"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <h6
              aria-label="Table title"
              class="MuiTypography-root makeStyles-title-13 MuiTypography-h6"
            >
              Forced checks
            </h6>
          </div>
          <table
            class="MuiTable-root"
            role="table"
          >
            <thead
              class="MuiTableHead-root makeStyles-tableHead-10"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
                role="row"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                />
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                >
                  Service name
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                >
                  Service id
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  colspan="1"
                  role="columnheader"
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
              role="rowgroup"
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;
